Fixed the color of the reset search button to be more visible

--- a/css/main.css
+++ b/css/main.css
@@ -676,8 +676,8 @@ border: 1px solid white;
 .reset-search {
   display: inline-block;
   padding: 10px 20px;
-  color: white;
-  background-color: #9ad1d4;
+  color: rgb(255, 255, 255);
+  background-color: #00bac4;
   border: none;
   border-radius: 5px;
   cursor: pointer;
